error solve and image is visible

--- a/src/components/FoodCard/FoodCard.css
+++ b/src/components/FoodCard/FoodCard.css
@@ -3,6 +3,7 @@
     border: 1px solid black;
     border-radius: 10px;
     position: relative;
+    margin: 10px;
 }
 .foodcard:hover{
     transition: 0.3s;
@@ -15,6 +16,7 @@
     background-color: white;
     right: 10px;
     top: 10px;
+    border-radius: 10px;
 }
 .price{
     font-weight: bold;
@@ -23,5 +25,9 @@
 .food-card-img{
     width: 100%;
     object-fit: cover;
+    height: 200px;
     border-radius: 10px;
+    margin-top: -5px;
+    margin-left: -5px;
+    margin-right: -5px;    
 }
